WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111847
[Qt] Doesn't build with QtMultimedia
https://bugs.webkit.org/show_bug.cgi?id=111847
Summary
[Qt] Doesn't build with QtMultimedia
Allan Sandfeld Jensen
Reported
2013-03-08 05:20:39 PST
MediaPlayerPrivateQt.h needs TextureMapperPlatformLayer which is no longer provided by the included TextureMapper.h
Attachments
Patch
(1.23 KB, patch)
2013-03-08 05:22 PST
,
Allan Sandfeld Jensen
jturcotte
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2013-03-08 05:22:24 PST
Created
attachment 192204
[details]
Patch
Allan Sandfeld Jensen
Comment 2
2013-03-08 05:26:18 PST
Committed
r145210
: <
http://trac.webkit.org/changeset/145210
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug