[Qt] Doesn't build with QtMultimedia https://bugs.webkit.org/show_bug.cgi?id=111847

Reviewed by Jocelyn Turcotte.

Fix include.

* platform/graphics/qt/MediaPlayerPrivateQt.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@145210 bbb929c8-8fbe-4397-9dbb-9b2b20218538