third_party/WebKit/Source/WebCore/platform/graphics/qt/MediaPlayerPrivateQt.h
@@ -35,7 +35,7 @@ class QGraphicsScene;
 QT_END_NAMESPACE
 
 #if USE(ACCELERATED_COMPOSITING)
-#include "TextureMapper.h"
+#include "TextureMapperPlatformLayer.h"
 #endif
 
 namespace WebCore {
